<resources>
  <string name="app_name">GitHub User</string>
  <string name="avatar_user">avatar user</string>
  <string name="following">Following</string>
  <string name="followers">Followers</string>
  <string name="username">Username</string>
  <string name="location">Location</string>
  <string name="company">Company</string>
  <string name="repository">Repository</string>
  <string name="name">Name</string>
  <string name="icon_company">icon company</string>
  <string name="icon_location">icon location</string>
  <string name="logo_github">logo github</string>
  <string name="github_users">GitHub User\'s</string>
  <string name="detail_user">Detail User</string>

  <string name="search">Search</string>
  <string name="setting">Setting</string>
  <string name="search_hint">Username User</string>

  <string name="dark_mode">Dark Mode</string>
  <string name="button_to_add_user_to_favorite">button to add user to favorite</string>
  <string name="favorite">Favorite</string>
  <string name="favorite_user">Favorite User</string>

  <string name="message_delete">Are you sure delete this user from favorite?</string>
  <string name="deleted">User has been deleted from favorite</string>
  <string name="added">User has been added to favorite</string>
  <string name="delete">Delete</string>

  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="no_data">no user favorites</string>
</resources>