<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ui.activity.DetailUserActivity">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
      android:id="@+id/identity"
      android:layout_width="match_parent"
      android:layout_height="350dp"
      android:background="?attr/colorPrimaryVariant"
      android:orientation="vertical">

      <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="match_parent"
        android:layout_height="129dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/avatar_user"
        tools:src="@tools:sample/avatars" />

      <TextView
        android:id="@+id/tv_name"
        style="@style/TextViewBold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        tools:text="@string/name"
        tools:textSize="25sp" />

      <TextView
        android:id="@+id/tv_username"
        style="@style/TextViewRegular"
        android:layout_marginTop="-5dp"
        android:layout_marginBottom="10dp"
        tools:text="@string/username" />

      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
          android:layout_width="20dp"
          android:layout_height="20dp"
          android:contentDescription="@string/icon_location"
          android:src="@drawable/ic_location_city" />

        <TextView
          android:id="@+id/tv_location"
          style="@style/TextViewRegular"
          android:layout_marginStart="5dp"
          tools:text="@string/location" />

      </LinearLayout>

      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
          android:layout_width="20dp"
          android:layout_height="20dp"
          android:contentDescription="@string/icon_company"
          android:src="@drawable/ic_work" />

        <TextView
          android:id="@+id/tv_company"
          style="@style/TextViewRegular"
          android:layout_marginStart="5dp"
          tools:text="@string/company" />

      </LinearLayout>


    </LinearLayout>

    <RelativeLayout
      android:id="@+id/pop_view"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="30dp"
      android:layout_marginTop="-67dp"
      android:layout_marginEnd="30dp"
      android:background="@drawable/shadow"
      android:orientation="horizontal"
      android:padding="10dp"
      android:paddingStart="30dp"
      android:paddingEnd="30dp">

      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
          style="@style/TextViewBold"
          android:text="@string/followers" />

        <TextView
          android:id="@+id/tv_followers"
          style="@style/TextViewRegular"
          tools:text="@string/followers" />

      </LinearLayout>

      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:orientation="vertical">

        <TextView
          style="@style/TextViewBold"
          android:text="@string/repository" />

        <TextView
          android:id="@+id/tv_repository"
          style="@style/TextViewRegular"
          tools:text="@string/repository" />

      </LinearLayout>

      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
          style="@style/TextViewBold"
          android:text="@string/following" />

        <TextView
          android:id="@+id/tv_following"
          style="@style/TextViewRegular"
          tools:text="@string/following" />
      </LinearLayout>

    </RelativeLayout>

    <LinearLayout
      android:id="@+id/tabLayout_viewPager"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

      <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabIndicatorColor="?attr/color"
        app:tabRippleColor="?attr/color"
        app:tabTextColor="?attr/color" />

      <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    </LinearLayout>


  </LinearLayout>

  <com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/btn_favorite"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentEnd="true"
    android:layout_alignParentBottom="true"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="16dp"
    android:contentDescription="@string/button_to_add_user_to_favorite"
    android:src="@drawable/ic_favorite_fill" />

</RelativeLayout>
